refactor: rename user to owner
