# backend/src/main/java/com/mav/openzev/controller/DashboardController.java
@@ -2,11 +2,11 @@ package com.mav.openzev.controller;
 
 import com.mav.openzev.api.DashboardApi;
 import com.mav.openzev.api.model.AccountingOverviewDto;
+import com.mav.openzev.api.model.OwnerOverviewDto;
 import com.mav.openzev.api.model.UnitOverviewDto;
-import com.mav.openzev.api.model.UserOverviewDto;
 import com.mav.openzev.repository.AccountingRepository;
+import com.mav.openzev.repository.OwnerRepository;
 import com.mav.openzev.repository.UnitRepository;
-import com.mav.openzev.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -17,7 +17,7 @@ public class DashboardController implements DashboardApi {
 
   private final AccountingRepository accountingRepository;
   private final UnitRepository unitRepository;
-  private final UserRepository userRepository;
+  private final OwnerRepository ownerRepository;
 
   @Override
   public ResponseEntity<AccountingOverviewDto> getAccountingOverview() {
@@ -26,14 +26,14 @@ public class DashboardController implements DashboardApi {
   }
 
   @Override
-  public ResponseEntity<UnitOverviewDto> getUnitOverview() {
-    final long count = unitRepository.count();
-    return ResponseEntity.ok(new UnitOverviewDto().total((int) count));
+  public ResponseEntity<OwnerOverviewDto> getOwnerOverview() {
+    final long count = ownerRepository.count();
+    return ResponseEntity.ok(new OwnerOverviewDto().total((int) count));
   }
 
   @Override
-  public ResponseEntity<UserOverviewDto> getUserOverview() {
-    final long count = userRepository.count();
-    return ResponseEntity.ok(new UserOverviewDto().total((int) count));
+  public ResponseEntity<UnitOverviewDto> getUnitOverview() {
+    final long count = unitRepository.count();
+    return ResponseEntity.ok(new UnitOverviewDto().total((int) count));
   }
 }
